# osm-geo-flutter

./: .gitignore  README.md  commit_msg.txt  compact.md  inspect.py  setup_flutter.sh  walk.py
osm_geo_search/: pubspec.yaml
osm_geo_search/android/: CMakeLists.txt  build.gradle
osm_geo_search/darwin/: Package.swift
osm_geo_search/example/: README.md  pubspec.yaml
osm_geo_search/example/android/: build.gradle  gradle.properties  settings.gradle
osm_geo_search/example/android/app/: build.gradle
osm_geo_search/example/android/app/src/main/: AndroidManifest.xml
osm_geo_search/example/android/app/src/main/kotlin/com/example/osm_geo_search_example/: MainActivity.kt
osm_geo_search/example/lib/: main.dart
osm_geo_search/example/macos/Runner/: DebugProfile.entitlements
osm_geo_search/example/macos/Runner.xcodeproj/: project.pbxproj
osm_geo_search/example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
osm_geo_search/example/macos/Runner/Configs/: AppInfo.xcconfig
osm_geo_search/example/test/: widget_test.dart
osm_geo_search/lib/: osm_geo_search.dart
osm_geo_search/lib/src/: bindings.dart  engine.dart
osm_geo_search/linux/: CMakeLists.txt
osm_geo_search/native/: inspect.c  osm_geo_search.c  osm_geo_search.h  test_main.c
osm_geo_search/test/: osm_geo_search_test.dart
